--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.25", features = ["extension-module", "abi3"] }
+pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
 tokio = { version = "1.45.1", features = ["full"] }
 
 [dev-dependencies]
